--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/AuditPopupPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/AuditPopupPanel.html
@@ -24,8 +24,14 @@
             <tr>
                 <td><wicket:message key="AuditPopupPanel.descriptionPlaceholder" /></td>
                 <td>
-                    <input class="form-control input-sm"
+                    <input class="form-control input-sm" wicket:id="description"
                            wicket:message="placeholder:AuditPopupPanel.descriptionPlaceholder" />
+                </td>
+            </tr>
+            <tr>
+                <td><wicket:message key="AuditPopupPanel.exportTypePlaceholder" /></td>
+                <td>
+                    <select class="form-control input-sm" wicket:id="exportType" />
                 </td>
             </tr>
             <tr>
@@ -43,7 +49,9 @@
         </table>
 
         <div style="text-align: center;">
-            <a class="btn btn-primary" wicket:id="run"/>
+            <a class="btn btn-primary" wicket:id="runSave"/>
+            <a class="btn btn-info" wicket:id="save" />
+            <a class="btn btn-danger" wicket:id="cancel" />
         </div>
     </form>
 </wicket:panel>
