resource wizard small update, form groups impl updated, not finished yet

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismValuePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismValuePanel.html
@@ -33,7 +33,7 @@
 
             <!--<div wicket:id="helpContent"/>-->
         <!--</div>-->
-        <div wicket:id="feedback" class="feedbackPanel"/>
+        <span wicket:id="feedback" class="text-danger"/>
     </div>
 </wicket:panel>
 </html>
