--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/ConfigurationStep.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/ConfigurationStep.html
@@ -18,15 +18,15 @@
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
     <div class="row">
-        <div class="col-xs-6">
+        <div class="col-md-6">
             <div wicket:id="configuration" />
         </div>
-        <div class="col-xs-6">
-            todo
+        <div class="col-md-6">
+            <!-- todo split configuration into two columns... -->
         </div>
     </div>
 
 
-    <a class="btn btn-info" style="margin: 10px 0 20px;" wicket:id="testConnection" />
+    <a class="btn btn-info" style="margin: 10px 0 20px;" wicket:id="testConnection"/>
 </wicket:panel>
 </html>
