--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.html
@@ -174,6 +174,22 @@
                 </div>
             </div>
 
+            <hr style="margin-right: 20px;"/>
+
+            <div class="form-group">
+                <label class="col-lg-4 control-label">
+                    <wicket:message key="SystemConfigPanel.notification.redirectToFile"/>
+                </label>
+
+                <div class="col-lg-4">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" name="optionsRadios1">
+                        </label>
+                    </div>
+                </div>
+            </div>
+
             <!-- Connector frameworks configuration commented out for now
             <h3>
                 <wicket:message key="SystemConfigPanel.title.connectorFramework"/>
