Report UI implementation update. Work in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/DefaultReportPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/DefaultReportPanel.html
@@ -18,7 +18,7 @@
 <wicket:panel>
 
     <h3 style="margin-left: 20px;">
-        <wicket:message key="UserReportConfigPanel.title.basic"/>
+        <wicket:message key="defaultReportPanel.title.basic"/>
     </h3>
 
     <div class="row">
@@ -26,8 +26,6 @@
             <div class="form-group" wicket:id="name" />
             <div class="form-group" wicket:id="description" />
             <div class="form-group" wicket:id="exportType" />
-            <div class="form-group" wicket:id="dateFrom" />
-            <div class="form-group" wicket:id="dateTo" />
         </div>
     </div>
 
