--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/AceEditorPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/AceEditorPanel.html
@@ -15,21 +15,9 @@
   -->
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
-<wicket:panel>
+<body>
+<wicket:extend>
 
-    <h3 style="margin-left: 20px;">
-        <wicket:message key="UserReportConfigPanel.title.basic"/>
-    </h3>
-
-    <div class="row">
-        <div class="col-md-6">
-            <div class="form-group" wicket:id="name" />
-            <div class="form-group" wicket:id="description" />
-            <div class="form-group" wicket:id="exportType" />
-            <div class="form-group" wicket:id="dateFrom" />
-            <div class="form-group" wicket:id="dateTo" />
-        </div>
-    </div>
-
-</wicket:panel>
+</wicket:extend>
+</body>
 </html>
