--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/AuditPopupPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/AuditPopupPanel.html
@@ -17,42 +17,21 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <form wicket:id="form">
-        <div style="color: red;" wicket:id="feedback"/>
 
-        <table class="table table-condensed table-striped">
-            <tr>
-                <td><wicket:message key="AuditPopupPanel.descriptionPlaceholder" /></td>
-                <td>
-                    <input class="form-control input-sm" wicket:id="description"
-                           wicket:message="placeholder:AuditPopupPanel.descriptionPlaceholder" />
-                </td>
-            </tr>
-            <tr>
-                <td><wicket:message key="AuditPopupPanel.exportTypePlaceholder" /></td>
-                <td>
-                    <select class="form-control input-sm" wicket:id="exportType" />
-                </td>
-            </tr>
-            <tr>
-                <td><wicket:message key="AuditPopupPanel.dateFrom"/></td>
-                <td><span wicket:id="dateFrom"/></td>
-            </tr>
-            <tr>
-                <td><wicket:message key="AuditPopupPanel.dateTo"/></td>
-                <td><span wicket:id="dateTo"/></td>
-            </tr>
-            <tr>
-                <td><wicket:message key="AuditPopupPanel.auditEventType"/></td>
-                <td><select class="form-control input-sm" wicket:id="auditEventType"/></td>
-            </tr>
-        </table>
+    <h3 style="margin-left: 20px;">
+        <wicket:message key="AuditPopupPanel.title"/>
+    </h3>
 
-        <div style="text-align: center;">
-            <a class="btn btn-primary" wicket:id="runSave"/>
-            <a class="btn btn-info" wicket:id="save" />
-            <a class="btn btn-danger" wicket:id="cancel" />
+    <div class="row">
+        <div class="col-md-6">
+            <div class="form-group" wicket:id="name" />
+            <div class="form-group" wicket:id="description" />
+            <div class="form-group" wicket:id="exportType" />
+            <div class="form-group" wicket:id="dateFrom" />
+            <div class="form-group" wicket:id="dateTo" />
+            <div class="form-group" wicket:id="auditEventType" />
         </div>
-    </form>
+    </div>
+
 </wicket:panel>
 </html>
