--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/cog/InlineMenu.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/cog/InlineMenu.html
@@ -21,7 +21,7 @@
     <ul class="nav nav-pills cog pull-right">
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown">
-                <i class="silk-cog"></i>
+                <i class="fa fa-cog"></i>
                 <b class="caret"></b>
             </a>
             <ul class="dropdown-menu pull-right" role="menu">
