user detail account min/max fix.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/CheckTableHeader.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/CheckTableHeader.html
@@ -20,7 +20,7 @@
     <div class="col-xs-10">
         <input type="checkbox" wicket:id="check"/>
         <i class="silk-user" wicket:id="icon"></i>
-        <span class="name" wicket:id="name"/>
+        <a wicket:id="link"><span class="name" wicket:id="name"/></a>
         <span class="description" wicket:id="description"/>
     </div>
     <div class="col-xs-2 cog" wicket:id="menu"/>
