--- a/gui/admin-gui/src/main/webapp/reports/reportUserAccounts.jrxml
+++ b/gui/admin-gui/src/main/webapp/reports/reportUserAccounts.jrxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="reportUserOrgs" columnCount="2" pageWidth="180" pageHeight="18" whenNoDataType="AllSectionsNoDetail" columnWidth="89" columnSpacing="1" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="67e465c5-46ea-40d2-bea0-469c6cf38937">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="reportUserAccounts" columnCount="2" pageWidth="180" pageHeight="18" whenNoDataType="AllSectionsNoDetail" columnWidth="89" columnSpacing="1" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="67e465c5-46ea-40d2-bea0-469c6cf38937">
 	<property name="ireport.zoom" value="1.6105100000000019"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<property name="net.sf.jasperreports.awt.ignore.missing.font" value="true"/>
 	<property name="net.sf.jasperreports.export.pdf.force.linebreak.policy" value="true"/>
-	<style name="Detail" isDefault="false" fontName="DejaVu Sans" fontSize="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="DejaVuSans.ttf" pdfEncoding="Identity-H" isPdfEmbedded="true"/>
+	<template><![CDATA[$P{BaseTemplateStyles}]]></template>
+	<parameter name="BaseTemplateStyles" class="java.lang.String"/>
 	<parameter name="USER_OID" class="java.lang.String"/>
 	<queryString language="hql">
 		<![CDATA[select r.name.orig as resourceName, s.name.orig as accountName from RObjectReference as o, RShadow as s, RResource as r where s.resourceRef.targetOid = r.oid and o.owner.oid = $P{USER_OID} and o.type = 9 and o.targetOid = s.oid and s.kind = 0 order by r.name.orig, s.name.orig]]>
