updated icons on resource pages.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/column/LinkIconPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/column/LinkIconPanel.html
@@ -18,7 +18,7 @@
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
     <a wicket:id="link">
-        <img wicket:id="image"/>
+        <i wicket:id="image"/>
     </a>
 </wicket:panel>
 </html>
