resource wizard, configuration step improvements.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaStep.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaStep.html
@@ -17,10 +17,10 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    schema
+    <div wicket:id="tabPanel" class="tabbable"/>
 
-    <div wicket:id="tabpanel" class="tabPanel"/>
-
-    <a class="btn btn-default" wicket:id="reload"/>
+    <div class="main-button-bar">
+        <a class="btn btn-default" wicket:id="reload"/>
+    </div>
 </wicket:panel>
 </html>
