--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/CapabilityStep.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/CapabilityStep.html
@@ -17,6 +17,15 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    capability
+    <div class="row">
+        <div class="col-md-6">
+            <h3><wicket:message key="CapabilityStep.native"/></h3>
+
+        </div>
+        <div class="col-md-6">
+            <h3><wicket:message key="CapabilityStep.configured"/></h3>
+
+        </div>
+    </div>
 </wicket:panel>
 </html>
