--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/ConfigurationStep.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/ConfigurationStep.html
@@ -26,7 +26,8 @@
         </div>
     </div>
 
-
-    <a class="btn btn-info" style="margin: 10px 0 20px;" wicket:id="testConnection"/>
+    <div class="main-button-bar">
+        <a class="btn btn-info" wicket:id="testConnection"/>
+    </div>
 </wicket:panel>
 </html>
