capabilities editor layout

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/CapabilityStep.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/CapabilityStep.html
@@ -27,5 +27,163 @@
 
         </div>
     </div>
+
+    <hr/>
+
+    <div class="row">
+        <div class="col-md-6">
+            <h3>Native</h3>
+            <div class="row">
+                <div class="col-md-4">
+                    <table class="table table-striped table-condensed">
+                        <tr>
+                            <td class="capability">
+                                <div class="cap-header"><input type="checkbox" value="checked"/>&nbsp;Read</div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="capability">
+                                <div class="cap-header"><input type="checkbox" value="checked"/>&nbsp;Update</div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="capability">
+                                <div class="cap-header"><input type="checkbox" value="checked"/>&nbsp;Create</div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="capability">
+                                <div class="cap-header"><input type="checkbox" value="checked"/>&nbsp;Delete</div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="capability">
+                                <div class="cap-header"><input type="checkbox" value="checked"/>&nbsp;Live sync</div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="capability">
+                                <div class="cap-header"><input type="checkbox" value="checked"/>&nbsp;Test connection</div>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="col-md-8">
+                    <table class="table table-striped table-condensed">
+                        <tr>
+                            <td class="capability">
+                                <div class="cap-header"><input type="checkbox" value="checked"/>&nbsp;<a href="#">Credentials</a></div>
+                                <div class="cap-body">
+                                    <div class="cap-header"><input type="checkbox" value="checked"/>&nbsp;<a href="#">Password</a></div>
+                                    <dl class="dl-horizontal">
+                                        <dt>Returned by default</dt>
+                                        <dd><input type="checkbox" value="checked"/></dd>
+                                    </dl>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="capability">
+                                <div class="cap-header"><input type="checkbox" value="checked"/>&nbsp;<a href="#">Scripts</a></div>
+                                <div class="cap-body">
+                                    <dl class="dl-horizontal">
+                                        <dt>On connector</dt>
+                                        <dd><input class="form-control input-sm" type="text" value="sql, java"/></dd>
+                                    </dl>
+                                    <dl class="dl-horizontal">
+                                        <dt>On Resource</dt>
+                                        <dd><input class="form-control input-sm" type="text"/></dd>
+                                    </dl>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="capability">
+                                <div class="cap-header"><input type="checkbox" value="checked"/>&nbsp;<a href="#">Activation</a></div>
+                                <div class="cap-body">
+                                    <div class="cap-header"><input type="checkbox" value="checked"/>&nbsp;<a href="#">Enabled/disabled</a></div>
+                                    <dl class="dl-horizontal">
+                                        <dt>Returned by default</dt>
+                                        <dd><input type="checkbox" value="checked"/></dd>
+                                    </dl>
+                                    <dl class="dl-horizontal">
+                                        <dt>Ignore attribute</dt>
+                                        <dd><input type="checkbox" value="checked"/></dd>
+                                    </dl>
+                                    <dl class="dl-horizontal">
+                                        <dt>Attribute name</dt>
+                                        <dd><select class="form-control input-sm"></select></dd>
+                                    </dl>
+                                    <dl class="dl-horizontal">
+                                        <dt>Enable list</dt>
+                                        <dd class="cap-dl-multivalue">
+                                            <div class="input-group">
+                                                <input type="text" class="form-control input-sm"/>
+                                                    <span class="input-group-btn">
+                                                        <a class="btn btn-sm btn-danger disabled" title="Remove">
+                                                            <i class="fa fa-minus"/>
+                                                        </a>
+                                                        <a class="btn btn-sm btn-success" title="Add">
+                                                            <i class="fa fa-plus"/>
+                                                        </a>
+                                                    </span>
+                                            </div>
+                                        </dd>
+                                    </dl>
+
+                                    <dl class="dl-horizontal">
+                                        <dt>Disable list</dt>
+                                        <dd class="cap-dl-multivalue">
+                                            <div class="input-group">
+                                                <input type="text" class="form-control input-sm"/>
+                                                    <span class="input-group-btn">
+                                                        <a class="btn btn-sm btn-danger" title="Remove">
+                                                            <i class="fa fa-minus"/>
+                                                        </a>
+                                                        <a class="btn btn-sm btn-success" title="Add">
+                                                            <i class="fa fa-plus"/>
+                                                        </a>
+                                                    </span>
+                                            </div>
+                                        </dd>
+                                        <dd>
+                                            <div class="input-group">
+                                                <input type="text" class="form-control input-sm"/>
+                                                    <span class="input-group-btn">
+                                                        <a class="btn btn-sm btn-danger" title="Remove">
+                                                            <i class="fa fa-minus"/>
+                                                        </a>
+                                                        <a class="btn btn-sm btn-success" title="Add">
+                                                            <i class="fa fa-plus"/>
+                                                        </a>
+                                                    </span>
+                                            </div>
+                                        </dd>
+                                    </dl>
+                                </div>
+                                <div class="cap-body">
+                                    <div class="cap-header"><input type="checkbox" value="checked"/>&nbsp;<a href="#">Status</a></div>
+                                </div>
+                                <div class="cap-body">
+                                    <div class="cap-header"><input type="checkbox" value="checked"/>&nbsp;<a href="#">Valid from</a></div>
+                                    <dl class="dl-horizontal">
+                                        <dt>Returned by default</dt>
+                                        <dd><input type="checkbox" value="checked"/></dd>
+                                    </dl>
+                                </div>
+                                <div class="cap-body">
+                                    <div class="cap-header"><input type="checkbox" value="checked"/>&nbsp;<a href="#">Valid to</a></div>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <h3>Configured</h3>
+
+        </div>
+    </div>
 </wicket:panel>
 </html>
