--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -3,6 +3,7 @@
 @import "../bootstrap/mixins.less";
 @import "midpoint-variables.less";
 @import "../custom/midpoint-variables.less";
+
 @import "top-menu.less";
 @import "prism-container.less";
 @import "wizard.less";
@@ -11,6 +12,7 @@
 @import "page-user-details.less";
 @import "page-dashboard.less";
 @import "page-debugs.less";
+@import "capabilities.less";
 
 div.wicket-debug-buttons {
   border: 1px solid #000000;
