Button-size of appender editing table changed to match overall layout design + MID-1726 fix

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.html
@@ -235,9 +235,9 @@
 
         <div wicket:id="appendersTable" />
 
-        <a class="btn btn-success btn-sm" wicket:id="addConsoleAppender"/>
-        <a class="btn btn-success btn-sm" wicket:id="addFileAppender"/>
-        <a class="btn btn-danger btn-sm" wicket:id="deleteAppender"/>
+        <a class="btn btn-success" wicket:id="addConsoleAppender"/>
+        <a class="btn btn-success" wicket:id="addFileAppender"/>
+        <a class="btn btn-danger" wicket:id="deleteAppender"/>
 
     </div>
 </div>
